Add dsm_epochs function

--- a/examples/source_level.ipynb
+++ b/examples/source_level.ipynb
@@ -73,15 +73,29 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  2.1min remaining:  2.1min\n",
-      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  2.2min finished\n"
+     "ename": "NameError",
+     "evalue": "name '_get_time_patch_centers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-14495b4fefbc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdsms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrsa\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdsm_epochs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mepochs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevents\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_folds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/m/home/home4/45/vanvlm1/data/projects/rsa/rsa/sensor_level.py\u001b[0m in \u001b[0;36mdsm_epochs\u001b[1;34m(epochs, noise_cov, spatial_radius, temporal_radius, dist_metric, dist_params, y, n_folds, verbose)\u001b[0m\n\u001b[0;32m    382\u001b[0m                          \u001b[0mtemporal_radius\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtemporal_radius\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    383\u001b[0m                          \u001b[0mdist_metric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdist_metric\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_params\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdist_params\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 384\u001b[1;33m                          n_folds=n_folds, verbose=verbose)\n\u001b[0m",
+      "\u001b[1;32m/m/home/home4/45/vanvlm1/data/projects/rsa/rsa/dsm.py\u001b[0m in \u001b[0;36mdsm_array\u001b[1;34m(X, dist, spatial_radius, temporal_radius, dist_metric, dist_params, y, n_folds, verbose)\u001b[0m\n\u001b[0;32m    508\u001b[0m         yield from dsm_spattemp(\n\u001b[0;32m    509\u001b[0m             \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mspatial_radius\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtemporal_radius\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_metric\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_params\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 510\u001b[1;33m             y, n_folds, verbose)\n\u001b[0m\u001b[0;32m    511\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    512\u001b[0m     \u001b[1;31m# Spatial RSA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/m/home/home4/45/vanvlm1/data/projects/rsa/rsa/dsm.py\u001b[0m in \u001b[0;36mdsm_spattemp\u001b[1;34m(data, dist, spatial_radius, temporal_radius, dist_metric, dist_params, y, n_folds, sel_series, verbose)\u001b[0m\n\u001b[0;32m    217\u001b[0m         \u001b[0msel_series\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_series\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    218\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 219\u001b[1;33m     \u001b[0mcenters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_time_patch_centers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_samples\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtemporal_radius\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    220\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    221\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name '_get_time_patch_centers' is not defined"
      ]
     }
    ],
+   "source": [
+    "dsms = list(rsa.dsm_epochs(epochs, y=epochs.events[:, 2], n_folds=5, verbose=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model_dsm = np.array([\n",
     "    [0, 0.5, 1, 1],\n",
@@ -94,17 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Brain subject_id=\"sample\", hemi=\"both\", surf=\"inflated\">\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rsa_vals.plot('sample', hemi='both', subjects_dir=subjects_dir)"
    ]
